# Aethos_Ai-X-Torqued_Neural__Terminal

./: README.md  pyproject.toml
.jules/: bolt.md
src/aethos_ai/: __init__.py  __main__.py  cli.py  config.py  logging.py  orchestrator.py
src/aethos_ai/actuators/: __init__.py  base.py  logger.py  registry.py
src/aethos_ai/core/: identity.py  story.py
src/aethos_ai/integrations/: __init__.py  registry.py  services.py
src/aethos_ai/memory/: __init__.py  store.py
src/aethos_ai/sensors/: __init__.py  base.py  registry.py  system.py  weather.py
tests/: test_story.py
