[project]
name = "aethos-ai"
version = "0.1.0"
description = "A modular AI orchestration framework for Aethos."
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethos-ai"
version = "0.1.0"
description = "A starter toolkit for the Aethos AI concept."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Aethos Contributors" }
]
keywords = ["ai", "orchestration", "sensors", "actuators"]

[project.scripts]
aethos-ai = "aethos_ai.cli:main"

[tool.black]
line-length = 100

target-version = ["py310"]

[tool.isort]
profile = "black"
keywords = ["ai", "assistant", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.scripts]
aethos = "aethos_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
